--- a/Weekly Paper/Week 2/브라우저.md
+++ b/Weekly Paper/Week 2/브라우저.md
@@ -1,1 +1,30 @@
+# ✅ 1. 브라우저가 어떻게 동작하는가?
+
+### 📘 전체 흐름 요약
+
+웹 브라우저는 사용자가 웹사이트를 요청하면 **HTML, CSS, JS 파일을 받아 화면에 웹페이지로 표시**하는 프로그램입니다.
+
+---
+
+### 🧭 브라우저 동작 과정 단계별 설명
+
+| 단계 | 설명 |
+|------|------|
+| **1. 주소 입력 및 요청 (URL 입력)** | 사용자가 주소창에 URL을 입력하면 브라우저가 서버에 HTTP 요청을 보냄 |
+| **2. 응답 수신** | 서버에서 HTML, CSS, JS 등의 리소스를 브라우저에 전달 |
+| **3. HTML 파싱** | HTML 문서를 한 줄씩 해석하여 **DOM(Document Object Model)** 생성 |
+| **4. CSS 파싱** | CSS 파일을 해석하여 **CSSOM(CSS Object Model)** 생성 |
+| **5. 렌더 트리 생성** | DOM + CSSOM → **렌더 트리(Render Tree)** 를 생성하여 표시할 구조 결정 |
+| **6. 레이아웃 (Reflow)** | 각 요소의 **위치와 크기 계산** |
+| **7. 페인팅 (Paint)** | 실제 화면에 **픽셀로 요소를 그림** |
+| **8. 자바스크립트 실행** | JS 파일 실행, DOM 조작 및 이벤트 처리 등 동적 기능 수행 |
+| **9. 사용자 상호작용 처리** | 클릭, 스크롤, 입력 등 사용자 이벤트에 반응 |
+
+---
+
+### 🎯 간단 정리
+
+> **"HTML → DOM 생성 → CSS 적용 → 렌더링 → JS 실행"**  
+>  
+> 이 과정을 브라우저가 빠르게 반복 수행하며 우리가 보는 **웹페이지**가 생성됩니다.
 
