Update 01 웹사이트 이론 기초.md

--- a/Study Notes/01 웹사이트 이론 기초.md
+++ b/Study Notes/01 웹사이트 이론 기초.md
@@ -60,5 +60,5 @@
 
 | 날짜        | 주제                   | 핵심 요약                            | 실습 내용                           | 문제 해결 / 느낀 점                                 | 키워드 태그                          | 복습 필요 |
 |-------------|------------------------|--------------------------------------|-------------------------------------|-----------------------------------------------------|--------------------------------------|------------|
-| 2025-06-26  | 웹의 동작 구조 이해     | 정적/동적 웹, API, DB 개념 정리     | Postman 실습, URL 구조 분석        | 경로 vs 쿼리 차이, DB 용도 혼동 → 비교로 해결       | #정적웹 #API #문제해결 #동적웹웹             | ✅         |
+| 2025-06-26  | 웹의 동작 구조 이해     | 정적/동적 웹, API, DB 개념 정리     | Postman 실습, URL 구조 분석        | 경로 vs 쿼리 차이, DB 용도 혼동 → 비교로 해결       | #정적웹 #API #문제해결 #동적웹             | ✅         |
 
