Update 리액트가 렌더링하는 방식.md

--- a/Weekly Paper/Week 4/리액트가 렌더링하는 방식.md
+++ b/Weekly Paper/Week 4/리액트가 렌더링하는 방식.md
@@ -1,1 +1,102 @@
+# 리액트가 랜더링하는 방식
+
+---
+
+## **쉽게 이해하기**
+
+> 리액트는 화면에서 바뀐 부분만 골라서 다시 그리는 똑똑한 시스템입니다.  
+> 전체 화면을 매번 새로 그리지 않아 **빠르고 효율적입니다.**
+
+---
+
+## **렌더링 과정**
+
+1. **처음 화면 만들기**  
+   Virtual DOM(가상 화면 설계도)을 만들고 실제 화면에 보여줌.
+
+2. **데이터 변화 감지**  
+   state나 props가 바뀌면 변경이 필요한 컴포넌트만 표시.
+
+3. **새 Virtual DOM 생성**  
+   변경된 데이터를 반영한 새로운 가상 설계도 작성.
+
+4. **비교(diffing)**  
+   이전 설계도와 새로운 설계도를 비교해서 변경된 부분 찾기.
+
+5. **필요한 부분만 업데이트(Reconciliation)**  
+   바뀐 부분만 실제 DOM에 반영.
+
+6. **화면 갱신(Painting)**  
+   사용자에게 변경된 화면 보여줌.
+
+---
+
+## **핵심 포인트**
+
+- **전체 화면이 아닌, 바뀐 부분만 갱신**  
+- **Virtual DOM**으로 빠르고 효율적인 업데이트  
+- **사용자 경험(UX) 개선**과 개발 편리성 보장
+
+---
+
+# **모범 답안**
+
+### **리액트가 렌더링하는 방식**
+
+리액트(React)는 사용자 인터페이스(UI)를 구성하는 데 사용되는 JavaScript 라이브러리로, **Virtual DOM**을 활용하여 효율적인 렌더링을 수행합니다.
+
+---
+
+### **1. Virtual DOM의 개념**
+
+- Virtual DOM은 실제 DOM의 **가벼운 복사본**으로 메모리 내에서 동작하는 추상화된 표현입니다.  
+- 컴포넌트의 상태가 변경될 때마다 새로운 Virtual DOM 트리를 생성하고, 이전 트리와 비교하여 변경 사항만 실제 DOM에 반영합니다.
+
+**목적**  
+- **성능 최적화**: 실제 DOM 조작 비용을 줄임.  
+- **효율적 업데이트**: 변경된 부분만 최소한으로 반영.
+
+---
+
+### **2. 렌더링 과정**
+
+1. **초기 렌더링**  
+   - 앱 실행 시 모든 컴포넌트의 JSX가 Virtual DOM에 렌더링.  
+   - 초기 상태를 기반으로 Virtual DOM 트리가 생성.
+
+2. **상태 변경**  
+   - state 또는 props가 변경되면 새로운 Virtual DOM 트리 생성.
+
+3. **Diffing 알고리즘**  
+   - 이전 트리와 새 트리를 비교(diff)하여 변경된 부분만 식별.
+
+4. **배치 업데이트**  
+   - 실제 DOM은 변경된 부분만 최소한으로 업데이트 → 연산 비용 감소.
+
+---
+
+### **3. Virtual DOM vs 실제 DOM**
+
+- **Virtual DOM**: 메모리에서 빠르게 변경 사항을 감지 및 처리.  
+- **실제 DOM**: 브라우저에서 직접 렌더링되는 구조로 조작 시 성능 부담이 큼.  
+- 리액트는 Virtual DOM에서 먼저 변경을 계산하고 필요한 최소한의 부분만 실제 DOM에 반영.
+
+---
+
+### **4. 리렌더링 조건**
+
+리렌더링은 다음과 같은 변경 시 발생:
+
+- **상태(State)** 변경  
+- **속성(Props)** 변경  
+- **컨텍스트(Context)** 값 변경
+
+리액트는 이러한 변경 사항을 효율적으로 관리하여 불필요한 리렌더링을 방지하고 최신 상태를 유지합니다.
+
+---
+
+### **결론**
+
+리액트는 **Virtual DOM → Diffing 알고리즘 → 최소한의 DOM 업데이트** 과정을 통해 성능을 최적화합니다.  
+이로써 개발자는 반응성 높은 UI를 효율적으로 구축할 수 있습니다.
 
