--- a/Weekly Paper/Week 2/브라우저.md
+++ b/Weekly Paper/Week 2/브라우저.md
@@ -1,30 +1,72 @@
 # 브라우저가 어떻게 동작하는가?
 
 ### 📘 전체 흐름 요약
-
-웹 브라우저는 사용자가 웹사이트를 요청하면 **HTML, CSS, JS 파일을 받아 화면에 웹페이지로 표시**하는 프로그램입니다.
+웹 브라우저는 사용자가 웹사이트를 요청하면 HTML, CSS, JS를 받아서 **화면에 웹페이지로 보여주는 프로그램**입니다.
 
 ---
 
 ### 🧭 브라우저 동작 과정 단계별 설명
 
 | 단계 | 설명 |
-|------|------|
-| **1. 주소 입력 및 요청 (URL 입력)** | 사용자가 주소창에 URL을 입력하면 브라우저가 서버에 HTTP 요청을 보냄 |
-| **2. 응답 수신** | 서버에서 HTML, CSS, JS 등의 리소스를 브라우저에 전달 |
-| **3. HTML 파싱** | HTML 문서를 한 줄씩 해석하여 **DOM(Document Object Model)** 생성 |
-| **4. CSS 파싱** | CSS 파일을 해석하여 **CSSOM(CSS Object Model)** 생성 |
-| **5. 렌더 트리 생성** | DOM + CSSOM → **렌더 트리(Render Tree)** 를 생성하여 표시할 구조 결정 |
-| **6. 레이아웃 (Reflow)** | 각 요소의 **위치와 크기 계산** |
-| **7. 페인팅 (Paint)** | 실제 화면에 **픽셀로 요소를 그림** |
-| **8. 자바스크립트 실행** | JS 파일 실행, DOM 조작 및 이벤트 처리 등 동적 기능 수행 |
-| **9. 사용자 상호작용 처리** | 클릭, 스크롤, 입력 등 사용자 이벤트에 반응 |
+| --- | --- |
+| **1. 주소 입력 및 요청** | 사용자가 URL을 입력하면 브라우저가 서버로 **HTTP 요청**을 보냄 |
+| **2. 응답 수신** | 서버에서 HTML, CSS, JS 등의 리소스를 브라우저로 전달 |
+| **3. HTML 파싱** | HTML을 해석하여 **DOM(Document Object Model)** 생성 |
+| **4. CSS 파싱** | CSS를 해석해 스타일 규칙을 적용, **CSSOM** 생성 |
+| **5. 렌더 트리 생성** | DOM + CSSOM → **Render Tree** 생성, 표시할 요소와 스타일 결정 |
+| **6. 레이아웃(Reflow)** | 각 요소의 위치와 크기를 계산 |
+| **7. 페인트(Paint)** | 계산된 정보를 바탕으로 화면에 픽셀을 그림 |
+| **8. 자바스크립트 실행** | JS 실행으로 동적 요소 처리 및 HTML 구조 조작 |
+| **9. 상호작용 처리** | 클릭, 스크롤 등 사용자 이벤트를 실시간으로 반영 |
 
 ---
 
-### 🎯 간단 정리
+### 🎯 한 줄 정리
+> "HTML → DOM 생성 → CSS 적용 → 렌더링 → JS 실행"  
+> 이 과정을 빠르게 반복해 우리가 보는 웹페이지가 실시간으로 그려집니다.
 
-> **"HTML → DOM 생성 → CSS 적용 → 렌더링 → JS 실행"**  
->  
-> 이 과정을 브라우저가 빠르게 반복 수행하며 우리가 보는 **웹페이지**가 생성됩니다.
+---
 
+# **모범 답안**
+
+### **브라우저란?**
+웹 페이지, 이미지, 비디오 등의 콘텐츠를 수신·전송·표현하는 소프트웨어.  
+대표 브라우저: **Chrome, Safari, Edge, Firefox** 등.
+
+---
+
+### **브라우저의 구조**
+![image.png](attachment:037ff543-aba8-4989-9076-b00da4fcfa62:image.png)
+- **사용자 인터페이스**: 주소창, 이전/다음, 새로고침 버튼 등 페이지 표시 영역 외 부분
+- **브라우저 엔진**: UI와 렌더링 엔진의 동작 제어, 자료 저장소 관리
+- **렌더링 엔진**: HTML, CSS 파싱 및 화면 렌더링
+- **통신 모듈**: HTTP 요청 등 네트워크 통신 담당
+- **자바스크립트 엔진**: JS 코드 해석 및 실행
+- **UI 백엔드**: OS에서 제공하는 UI 요소(`input`, `select`)를 그림
+- **자료 저장소**: 쿠키, 로컬 스토리지, 캐시 등 데이터 관리
+
+---
+
+### **통신 과정**
+1. URL 입력 → **DNS 조회**로 IP 주소 탐색  
+   예: `https://google.com` → `142.250.196.14`
+2. 브라우저가 서버와 **TCP 핸드셰이크** 및 **TLS 협상**으로 안전한 연결 수립
+3. **HTTP GET 요청**을 보내고 서버에서 응답을 수신
+4. 수신한 HTML, CSS, JS를 해석해 렌더링 과정을 통해 화면에 출력
+
+---
+
+### **렌더링 과정**
+![image.png](attachment:0c36f7f2-e561-4a38-85d0-359b1511ab90:image.png)
+1. **DOM & CSSOM 생성**: 서버에서 받은 HTML, CSS를 파싱
+![image.png](attachment:3b33792e-b8d4-447d-a7f3-fcb6fb295c15:image.png) 
+2. **Render Tree 생성**: 화면에 표현할 요소와 스타일 결정
+3. **Layout**: 각 요소의 위치와 크기 계산
+4. **Paint**: 계산된 정보로 픽셀을 실제 화면에 그림
+5. **Repaint/Composite**: 변화가 발생하면 필요한 부분만 다시 그림
+
+---
+
+### **핵심 포인트**
+- 브라우저는 **HTML, CSS, JS를 해석 → Render Tree 생성 → Layout → Paint** 순으로 화면을 그림
+- **렌더링 최적화**를 통해 빠르고 부드러운 사용자 경험(UX)을 제공
