--- a/Weekly Paper/Week 6/데이터베이스 정규화.md
+++ b/Weekly Paper/Week 6/데이터베이스 정규화.md
@@ -1,1 +1,51 @@
+## 📘 **데이터베이스 정규화란?**
 
+> 중복을 제거하고, 데이터를 더 효율적으로 관리하기 위해 테이블을 구조화하는 과정
+> 
+
+---
+
+## 🎯 **왜 정규화할까?**
+
+- 데이터를 **일관성 있게 유지**하고
+- **중복을 줄여서 저장 공간을 절약**하며
+- 데이터 변경 시 **수정해야 할 부분을 최소화**하기 위해
+
+---
+
+## 🧩 **정규형의 단계별 요약**
+
+| 정규형 | 조건 | 해결하는 문제 |
+| --- | --- | --- |
+| **1NF** (제1정규형) | 컬럼에 **반복되는 값 없이 원자값(단일 값)**만 저장 | 여러 값을 하나의 셀에 저장하는 문제 |
+| **2NF** (제2정규형) | 1NF 만족 + **부분 함수 종속 제거** | 복합 키의 일부에만 의존하는 컬럼 제거 |
+| **3NF** (제3정규형) | 2NF 만족 + **이행적 종속 제거** | 기본키 아닌 컬럼에 의존하는 다른 컬럼 제거 |
+| **BCNF** (보이스-코드 정규형) | 3NF 만족 + 모든 결정자가 후보키 | 후보키가 아닌 컬럼이 결정자 역할할 때 해결 |
+
+---
+
+## 📝 **예시**
+
+### ✅ 정규화 전 (중복 많음)
+
+| 학생ID | 이름 | 과목 | 교수 |
+| --- | --- | --- | --- |
+| 1 | 철수 | 수학 | 김교수 |
+| 1 | 철수 | 과학 | 이교수 |
+- 철수라는 이름이 반복됨
+- 교수 이름도 반복됨
+
+### ✅ 정규화 후 (테이블 분리)
+
+- **학생 테이블**: ID, 이름
+- **과목 테이블**: 과목, 교수
+- **수강 테이블**: 학생ID, 과목
+
+➡️ 이렇게 하면 중복이 줄어들고, 나중에 교수나 과목이 바뀌어도 **한 군데만 수정**하면 됨!
+
+---
+
+## ✅ **핵심 정리**
+
+- 정규화는 **데이터의 중복을 줄이고**, **무결성(정확성)**을 높이는 과정
+- 정규형은 **단계별로 엄격해지며**, 실제로는 **3NF 정도까지만 적용**하는 경우가 많음
