Update 13 마우스 이벤트 정리.md

--- a/Study Notes/13 마우스 이벤트 정리.md
+++ b/Study Notes/13 마우스 이벤트 정리.md
@@ -1,1 +1,94 @@
+# 마우스 이벤트 정리
 
+
+### 📅 날짜:
+
+> 2025.07.15 (화)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> classList 조작 / data 속성 접근 / 마우스 이벤트 종류 및 좌표 확인
+> 
+
+---
+
+### 📝 핵심 개념 요약:
+
+- `classList`를 통해 클래스 추가/제거/토글/존재 여부 확인
+- `dataset` 속성으로 `data-*` 커스텀 속성에 접근
+- 마우스 클릭 및 이동 이벤트의 종류를 파악하고 조건 처리 가능
+- `clientX`, `pageX`, `offsetX` 등으로 마우스 위치 기준 파악 가능
+- `preventDefault()`를 통해 기본 동작(예: 오른쪽 메뉴 열기 등)을 차단 가능
+
+### 📌 중요 개념 요약 표
+
+### ✅ classList 관련 메서드
+
+| 메서드 | 기능 |
+| --- | --- |
+| `add('클래스')` | 클래스 추가 |
+| `remove('클래스')` | 클래스 제거 |
+| `toggle('클래스')` | 있으면 제거, 없으면 추가 |
+| `contains('클래스')` | 클래스 포함 여부 확인 |
+
+### ✅ data-* 속성 접근법
+
+| HTML 속성 | JS 접근 방법 |
+| --- | --- |
+| `data-user-id` | `elem.dataset.userId` |
+| `data-role` | `elem.dataset.role` |
+
+### ✅ MouseEvent 종류 및 사용법
+
+| 이벤트 종류 | 설명 |
+| --- | --- |
+| `click` | 마우스 왼쪽 버튼 클릭 |
+| `contextmenu` | 마우스 오른쪽 버튼 클릭 (우클릭) |
+| `dblclick` | 더블 클릭 |
+| `mousedown` | 버튼 누른 순간 |
+| `mouseup` | 버튼 뗀 순간 |
+
+> event.button === 0 → 왼쪽 버튼
+> 
+> 
+> `event.button === 2` → 오른쪽 버튼
+> 
+
+### ✅ 마우스 좌표 관련 속성
+
+| 속성 | 기준 |
+| --- | --- |
+| `clientX`, `clientY` | 브라우저 화면 기준 |
+| `pageX`, `pageY` | 전체 문서 기준 |
+| `offsetX`, `offsetY` | 이벤트 대상 요소 기준 |
+
+### 💻 실습 내용 정리:
+
+- `classList.add/remove/toggle/contains` 사용해 요소 스타일 동적 변경
+- `data-user-id`, `data-role` 등 커스텀 속성 접근 실습
+- `MouseEvent.button` 활용하여 좌/우 클릭 이벤트 구분
+- `mousemove`, `mouseover`, `mouseout` 이벤트 발생 시 좌표 출력
+- 우클릭 시 contextmenu 막기 (`preventDefault()` 사용)
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- `outerHTML`은 **요소 자체를 교체**, `innerHTML`은 **내부만 수정**
+- `append`/`prepend`는 요소를 옮기는 개념이라 **기존 위치에서 제거됨**
+- `className`으로 전체 클래스 교체하면 **기존 클래스 사라짐**
+- 이벤트 버블링이 예상치 못한 동작을 유발할 수 있음 → `stopPropagation()` 필요 시 사용
+
+### 💡 느낀 점 / 배운 점:
+
+- `dataset.userId`처럼 카멜케이스 변환 규칙 주의 (data-user-id → userId)
+- 마우스 포인터 위치가 상황에 따라 달라지는 점(`clientX` vs `pageX`)
+- 마우스 이벤트 핸들러에서 `button` 값으로 클릭 종류를 구분할 수 있어 편리함
+- 이벤트가 겹치는 상황에서 `mouseover`와 `mousemove` 차이를 명확히 구분할 필요
+
+### 🏷️ 키워드 (태그):
+
+`#classList` `#dataset` `#마우스이벤트` `#preventDefault` `#MouseEvent` `#클래스조작` `#좌표속성`
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-07-15 | 클래스 조작 & 마우스 이벤트 | `classList`, `dataset`, 마우스 클릭·이동 이벤트 처리 | 클릭 종류별 처리, class 토글, 좌표 출력 | 우클릭 방지 처리, dataset 접근 방식 정리 | `#classList`, `#MouseEvent`, `#좌표속성` | ✅ |
