--- a/Weekly Paper/Week 6/데이터베이스 정규화.md
+++ b/Weekly Paper/Week 6/데이터베이스 정규화.md
@@ -52,78 +52,152 @@
 
 # 모범 답안
 
-## 📌 React에서 배열 렌더링 시 `key`를 설정해야 하는 이유와 주의할 점
+## 📚 데이터베이스 정규화 (Normalization)
+
+> 목적: 데이터 중복 최소화 & 무결성 유지
+> 
+> 
+> **핵심 원칙**: 하나의 데이터는 한 번만 저장, 의미 있는 관계 유지
+> 
 
 ---
 
-### 1️⃣ **왜 key가 필요한가?**
+### ✨ 정규화의 장점
 
-- `key`는 **React가 리스트 항목을 고유하게 식별**하는 기준입니다.
-- 리스트 요소가 **추가/삭제/재정렬**될 때, 어떤 요소가 변경되었는지를 빠르게 파악하여 **필요한 부분만 갱신**할 수 있게 합니다.
-- 이를 통해 **불필요한 DOM 재생성**을 방지하고 **렌더링 성능**을 최적화합니다.
+- 🔄 **중복 최소화** → 데이터 일관성 유지
+- 🛡 **무결성 강화** → 오류 가능성 감소
+- ⚡ **검색·수정 효율 향상**
 
-**예시**
+---
 
-```jsx
-const listItems = items.map(item =>
-  <li key={item.id}>{item.name}</li>
+## 📌 정규화 단계별 설명 & 예시
+
+---
+
+### 1️⃣ 제1정규형 (1NF)
+
+- 모든 컬럼은 **원자값**만 가져야 함 (하나의 칸에 여러 값 ❌)
+
+**❌ 잘못된 예시**
+
+```sql
+CREATE TABLE Student (
+    student_id INT PRIMARY KEY,
+    name VARCHAR(50),
+    hobbies VARCHAR(255) -- '독서, 음악, 영화'
+);
+```
+
+**✅ 1NF 적용 예시**
+
+```sql
+CREATE TABLE Student (
+    student_id INT,
+    name VARCHAR(50),
+    hobby VARCHAR(50),
+    PRIMARY KEY (student_id, hobby)
+);
+```
+
+| student_id | name | hobby |
+| --- | --- | --- |
+| 1 | 홍길동 | 독서 |
+| 1 | 홍길동 | 음악 |
+
+---
+
+### 2️⃣ 제2정규형 (2NF)
+
+- 1NF 만족 + **부분 함수 종속 제거**
+- 복합키의 일부에만 종속된 컬럼을 분리
+
+**❌ 잘못된 예시**
+
+```sql
+CREATE TABLE Enrollment (
+    student_id INT,
+    course_id INT,
+    student_name VARCHAR(50), -- student_id에만 종속
+    PRIMARY KEY (student_id, course_id)
+);
+```
+
+**✅ 2NF 적용 예시**
+
+```sql
+CREATE TABLE Student (
+    student_id INT PRIMARY KEY,
+    student_name VARCHAR(50)
+);
+
+CREATE TABLE Enrollment (
+    student_id INT,
+    course_id INT,
+    PRIMARY KEY (student_id, course_id),
+    FOREIGN KEY (student_id) REFERENCES Student(student_id)
 );
 ```
 
 ---
 
-### 2️⃣ **key가 없으면 생기는 문제**
+### 3️⃣ 제3정규형 (3NF)
 
-- React는 각 요소의 변화를 구분할 수 없어, **모든 요소를 새로 렌더링**하게 됩니다.
-- 이는 **성능 저하**와 **불필요한 DOM 조작**을 유발합니다.
+- 2NF 만족 + **이행 함수 종속 제거**
+- 기본 키가 아닌 컬럼이 다른 기본 키가 아닌 컬럼에 종속되면 분리
 
----
+**❌ 잘못된 예시**
 
-### 3️⃣ **key 설정 시 주의할 점**
-
-### ✅ 고유한 값 사용
-
-- 동일한 리스트 내에서 `key`는 **중복되지 않아야 함**.
-- **데이터베이스 ID**, **UUID** 등 **변하지 않는 값** 사용 권장.
-
-```jsx
-// 좋은 예시: 고유한 ID 사용
-const listItems = items.map(item =>
-  <li key={item.id}>{item.name}</li>
+```sql
+CREATE TABLE Employee (
+    emp_id INT PRIMARY KEY,
+    emp_name VARCHAR(50),
+    dept_id INT,
+    dept_name VARCHAR(50) -- dept_id에 종속
 );
 ```
 
-### ⚠️ 인덱스 사용 주의
+**✅ 3NF 적용 예시**
 
-- 배열 인덱스를 `key`로 쓰면, **요소 추가/삭제/정렬 시** 인덱스가 바뀌어 버그가 생길 수 있음.
-- 특히 **동적인 리스트**에서는 피해야 함.
-
-```jsx
-// 나쁜 예시: 인덱스 사용
-const listItems = items.map((item, index) =>
-  <li key={index}>{item.name}</li>
+```sql
+CREATE TABLE Department (
+    dept_id INT PRIMARY KEY,
+    dept_name VARCHAR(50)
 );
-```
 
----
-
-### 4️⃣ **예외적으로 인덱스 사용 가능할 때**
-
-- **정적인 리스트**이거나, 절대 변경/정렬되지 않는 경우
-- 이 경우 인덱스 사용이 성능상 문제를 만들지 않음
-
-```jsx
-// 예외 상황: 변하지 않는 리스트
-const staticItems = ['Item1', 'Item2', 'Item3'];
-const listItems = staticItems.map((item, index) =>
-  <li key={index}>{item}</li>
+CREATE TABLE Employee (
+    emp_id INT PRIMARY KEY,
+    emp_name VARCHAR(50),
+    dept_id INT,
+    FOREIGN KEY (dept_id) REFERENCES Department(dept_id)
 );
 ```
 
 ---
 
-### 📌 **결론**
+### 4️⃣ 보이스-코드 정규형 (BCNF)
 
-- **원칙**: 변하지 않는 **고유 식별자**를 `key`로 사용
-- **지양**: 인덱스를 `key`로 사용 (동적 리스트에서 특히 위험)
-- **효과**: DOM 변경 최소화 → 성능 최적화 & 예기치 않은 버그 방지
+- 3NF 만족 + **모든 결정자가 후보 키**
+- 후보 키가 아닌 속성이 결정자가 되지 않도록 설계
+
+---
+
+## ⚖️ 장단점
+
+**장점**
+
+- 데이터 중복 제거
+- 무결성 유지
+- 유지보수 용이
+
+**단점**
+
+- 테이블이 많아져 조인 연산 증가
+- 성능 저하 가능성 → 일부 비정규화 고려 필요
+
+---
+
+💡 **결론**
+
+정규화는 데이터 품질과 무결성을 높이는 필수 설계 과정이지만,
+
+실제 서비스에서는 **성능 요구사항에 맞춰 적절한 단계까지만 적용**해야 함.
