Update 관계형 데이터베이스를 사용하는 이유.md

--- a/Weekly Paper/Week 7/관계형 데이터베이스를 사용하는 이유.md
+++ b/Weekly Paper/Week 7/관계형 데이터베이스를 사용하는 이유.md
@@ -1,1 +1,39 @@
+# 📌 관계형 데이터베이스(RDB)를 사용하는 이유
 
+### 1️⃣ 데이터 무결성 보장
+
+- **정규화**를 통해 중복 최소화
+- **참조 무결성**(외래 키 제약조건)으로 데이터 일관성 유지
+
+### 2️⃣ 복잡한 쿼리 처리 가능
+
+- SQL을 활용해 **JOIN, GROUP BY, 집계 함수** 등 강력한 질의 가능
+- 다대다 관계, 트랜잭션 처리에 적합
+
+### 3️⃣ 트랜잭션 보장 (ACID 특성)
+
+- **원자성(Atomicity), 일관성(Consistency), 격리성(Isolation), 지속성(Durability)**
+- 금융, 쇼핑몰 결제 등 중요한 데이터 처리에 안정적
+
+### 4️⃣ 보안 및 표준화
+
+- SQL 기반 표준화된 질의 언어
+- 권한 관리, 사용자 인증 등 강력한 보안 기능 제공
+
+---
+
+📌 **정리**
+
+| 이유 | 설명 |
+| --- | --- |
+| 데이터 무결성 | 중복 최소화 & 참조 무결성 유지 |
+| 복잡한 질의 처리 | JOIN 등 관계형 연산 지원 |
+| 트랜잭션 보장 | ACID 특성으로 안정적 데이터 관리 |
+| 보안 & 표준화 | SQL 표준, 권한 관리 제공 |
+
+---
+
+👉 정리하면,
+
+- **렌더링 방식**은 **서비스 성격(상호작용/SEO/정적성)**에 맞게 선택해야 하고,
+- **RDB**는 데이터의 **정확성·안정성·복잡한 질의 처리**가 중요한 경우 최적의 선택이 됩니다.
