Update 관계형 데이터베이스를 사용하는 이유.md

--- a/Weekly Paper/Week 7/관계형 데이터베이스를 사용하는 이유.md
+++ b/Weekly Paper/Week 7/관계형 데이터베이스를 사용하는 이유.md
@@ -39,3 +39,71 @@
 - **RDB**는 데이터의 **정확성·안정성·복잡한 질의 처리**가 중요한 경우 최적의 선택이 됩니다.
 
 # 모범 답안
+# 📘 관계형 데이터베이스(RDBMS)를 사용하는 이유
+
+### 📝 핵심 요약
+
+관계형 데이터베이스는 **데이터 무결성, 중복 최소화, 강력한 쿼리 기능, 보안, 트랜잭션 관리, 관계 모델링, 확장성**을 제공하여 데이터 관리의 신뢰성과 효율성을 높여줍니다.
+
+---
+
+## 1. 데이터 무결성과 일관성 유지 (ACID 특성)
+
+- **Atomicity(원자성)**: 트랜잭션은 전부 수행되거나 전혀 수행되지 않음
+- **Consistency(일관성)**: 항상 유효한 상태 유지
+- **Isolation(고립성)**: 동시에 실행돼도 서로 간섭 X
+- **Durability(지속성)**: 완료된 데이터는 영구 저장
+
+📌 → 데이터가 **정확하고 신뢰 가능**하게 관리됨
+
+---
+
+## 2. 데이터 중복 최소화
+
+- **정규화**를 통해 중복 제거, 일관성 확보
+- **기본 키 / 외래 키 제약**으로 데이터 무결성 보장
+
+---
+
+## 3. 강력한 SQL 지원
+
+- **복잡한 쿼리** (JOIN, 집계, 서브쿼리 등) 가능
+- **데이터 조작** (INSERT, UPDATE, DELETE) 효율적
+
+---
+
+## 4. 데이터 보안
+
+- **권한 관리**: 사용자별 접근 제어
+- **암호화 지원**: 민감 데이터 보호
+
+---
+
+## 5. 트랜잭션 관리
+
+- **트랜잭션 단위 처리**: 안정적 데이터 관리
+- **Commit & Rollback**으로 오류 발생 시 복구 가능
+
+---
+
+## 6. 데이터 관계 모델링
+
+- **ER 다이어그램**으로 관계 구조 시각화
+- **참조 무결성** 보장 (외래 키 제약)
+
+---
+
+## 7. 확장성 & 호환성
+
+- 다양한 규모의 시스템에서 사용 가능
+- 여러 애플리케이션 및 플랫폼과 호환
+
+---
+
+## ✅ 결론
+
+관계형 데이터베이스는
+
+👉 **데이터 무결성 보장, 중복 최소화, 강력한 쿼리 기능, 보안, 트랜잭션 관리, 관계 모델링, 확장성** 때문에
+
+오늘날에도 기업과 개발자가 가장 많이 사용하는 **표준 데이터 관리 도구**입니다.
