Update 14 키보드 이벤트 정리.md

--- a/Study Notes/14 키보드 이벤트 정리.md
+++ b/Study Notes/14 키보드 이벤트 정리.md
@@ -1,1 +1,125 @@
+# 키보드 이벤트 정리 & 기본 문법
 
+### 📅 날짜:
+
+> 2025.07.16 (수)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> 키보드 이벤트 / input 이벤트 / 데이터 타입 / 변수 선언 / 함수 선언 / this 키워드
+> 
+
+---
+
+### 📝 핵심 개념 요약:
+
+- `keydown`, `keypress`, `keyup`을 사용해 키보드 입력 감지
+- `e.key`, `e.code`로 실제 입력값과 물리적 키 위치 구분
+- `focus`, `blur`, `input`, `change`, `submit` 등 다양한 폼 관련 이벤트 존재
+- 데이터 타입은 기본형 vs 참조형으로 나뉘며, `typeof`로 확인
+- `&&`, `||`, `??` 등의 논리 연산자는 평가 방식 차이 존재
+- `var`, `let`, `const` 각각의 스코프와 호이스팅 차이 주의
+- 함수 선언, 표현식, 화살표 함수, Rest 파라미터로 다양한 형태의 함수 사용 가능
+- `this`는 호출된 문맥에 따라 값이 동적으로 바뀜
+
+### 📌 중요 개념 요약 표
+
+### ✅ 키보드 이벤트
+
+| 이벤트 | 설명 |
+| --- | --- |
+| `keydown` | 키를 누른 순간 |
+| `keypress` | 키를 누른 순간(단, 특수키 감지 어려움) |
+| `keyup` | 키를 떼는 순간 |
+
+| 프로퍼티 | 설명 |
+| --- | --- |
+| `e.key` | 사용자가 실제 누른 키의 값 |
+| `e.code` | 물리적 키보드 위치 |
+
+### ✅ 폼 관련 이벤트
+
+| 이벤트 | 설명 |
+| --- | --- |
+| `focusin` / `focus` | 요소가 포커스를 받을 때 |
+| `focusout` / `blur` | 요소가 포커스를 잃을 때 |
+| `input` | 값이 입력될 때 실시간 감지 |
+| `change` | 값이 최종적으로 변경됐을 때 |
+| `submit` | 폼 전송 시 발생 |
+
+### ✅ 데이터 타입 구분
+
+| 타입 종류 | 예시 |
+| --- | --- |
+| 기본형 | number, string, boolean, null, undefined, symbol, bigint |
+| 참조형 | object, array, function |
+
+### ✅ falsy / truthy 값
+
+| 평가 결과 | 값 |
+| --- | --- |
+| **falsy** | `false`, `0`, `NaN`, `''`, `null`, `undefined` |
+| **truthy** | 나머지 모든 값 (`[]`, `{}`, `"0"` 등) |
+
+### ✅ 논리 연산자 평가 방식
+
+| 연산자 | 설명 |
+| --- | --- |
+| `&&` | 앞이 truthy → 뒤 리턴 / 앞이 falsy → 앞 리턴 |
+| `||`  | 앞이 truthy → 앞 리턴/ 앞이 falsy → 뒤 리턴 |
+| `??` | 앞이 null/undefined → 뒤 리턴, 아니면 앞 리턴 |
+
+### ✅ 변수 선언 차이
+
+| 변수 타입 | 중복 선언 | 선언 전 사용 | 스코프 | 재할당 |
+| --- | --- | --- | --- | --- |
+| `var` | 가능 | 가능 (호이스팅) | 함수 스코프 | 가능 |
+| `let` | 불가능 | 불가능 | 블록 스코프 | 가능 |
+| `const` | 불가능 | 불가능 | 블록 스코프 | **불가능** |
+
+### ✅ 함수 선언 방식
+
+| 유형 | 문법 | 특성 |
+| --- | --- | --- |
+| 선언형 | `function fn() {}` | 호이스팅 O |
+| 표현식 | `const fn = function() {}` | 호이스팅 X |
+| 화살표 | `const fn = () => {}` | `this`가 상위 스코프를 가리킴 |
+
+### ✅ this 키워드 비교
+
+| 선언 방식 | this의 의미 |
+| --- | --- |
+| 일반 함수 | 호출한 객체에 따라 달라짐 |
+| 화살표 함수 | this가 정적으로 바인딩 (상위 스코프 사용) |
+
+### 💻 실습 내용 정리:
+
+- 키보드 이벤트로 `Enter` 키 입력 시 메시지 출력
+- `focusin`, `input`, `submit` 이벤트 실습
+- `typeof`, `falsy/truthy` 값 체크
+- `const`, `let`, `var` 각각 선언 및 스코프 확인
+- 화살표 함수와 일반 함수 차이 실습
+- Rest 파라미터로 동적 인자 처리 구현
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- `keypress`는 **특수키 감지에 제약**이 있어, 실무에서는 `keydown`을 쓰는 게 더 안정적이라는 점을 실습하며 이해함
+- `blur`, `focus` 이벤트는 **버블링이 되지 않아** 예상한 방식으로 동작하지 않았고, 이를 `focusin`, `focusout`으로 바꾸니 해결됨
+- `this`는 **함수 선언 방식에 따라 값이 달라지는 동적 개념**이므로 초기에는 동작이 이해되지 않았으나 콘솔 로그로 비교하며 해결
+- `??`와 `||`의 차이가 헷갈렸으나, `||`는 `0`, `''`도 false로 보고 넘어가는 반면, `??`는 **`null` 또는 `undefined`만**을 처리한다는 점을 명확히 구분함
+
+### 💡 느낀 점 / 배운 점:
+
+- `keydown`이 가장 범용적으로 안정적인 키 입력 이벤트라는 걸 알게 되었음
+- DOM 이벤트의 흐름과 **버블링/캡쳐링 구조**를 정확히 이해하고 활용할 수 있게 됨
+- `this`는 **화살표 함수 vs 일반 함수**에 따라 가리키는 대상이 달라지므로, 선언 방식의 중요성을 깨달음
+- *논리 연산자(`&&`, `||`, `??`)**의 평가 방식 차이를 이해하고 조건문에서 의도대로 동작하게 작성하는 법을 익힘
+
+### 🏷️ 키워드 (태그):
+
+`#keyboardEvent` `#폼이벤트` `#typeof` `#truthfalsy` `#varLetConst` `#함수선언` `#arrowfunction`  `#this` 
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-07-16 | 키보드 & 기본 문법 | 이벤트 종류, 변수 선언, 함수 선언 방식 및 this 이해 | 키 이벤트, 입력값 추적, this 실습 | key vs code 차이, this는 외워야 할 개념 | `#KeyboardEvent`, `#RestParam`, `#this`, `#typeof` | ✅ |
