Update 웹 페이지 렌더링 방식.md

--- a/Weekly Paper/Week 7/웹 페이지 렌더링 방식.md
+++ b/Weekly Paper/Week 7/웹 페이지 렌더링 방식.md
@@ -1,1 +1,46 @@
+# 📌 웹 페이지 렌더링 방식
 
+### 1️⃣ CSR (Client Side Rendering)
+
+- **특징**
+    - 최초에 **빈 HTML + JS 번들**만 전달
+    - 브라우저에서 JS 실행 후 DOM을 생성하여 화면 렌더링
+    - 초기 로딩은 느리지만, 이후 페이지 전환은 빠름 (SPA 특징)
+- **사용 상황**
+    - 사용자와의 **상호작용이 많은 웹앱** (예: 대시보드, SNS)
+    - SEO(검색엔진 최적화) 중요하지 않은 서비스
+
+---
+
+### 2️⃣ SSR (Server Side Rendering)
+
+- **특징**
+    - 서버에서 **완성된 HTML**을 생성하여 클라이언트에 전달
+    - 초기 로딩 속도가 빠름
+    - SEO에 유리
+    - 하지만, 페이지 이동 시마다 서버와 통신 필요
+- **사용 상황**
+    - **검색엔진 노출이 중요한 서비스** (예: 블로그, 쇼핑몰)
+    - 초기 로딩 속도가 중요한 페이지
+
+---
+
+### 3️⃣ SSG (Static Site Generation)
+
+- **특징**
+    - 빌드 시점에 **HTML 파일을 미리 생성**해 두고 요청 시 즉시 제공
+    - 속도가 매우 빠르고 서버 부하 적음
+    - 데이터가 자주 변하지 않는 경우 유리
+- **사용 상황**
+    - **정적인 콘텐츠 위주 서비스** (예: 문서 사이트, 블로그)
+    - 변경이 적고 전 세계 캐싱이 필요한 서비스
+
+---
+
+📌 **정리**
+
+| 방식 | 장점 | 단점 | 적합한 상황 |
+| --- | --- | --- | --- |
+| CSR | 상호작용성 뛰어남, 빠른 페이지 전환 | 초기 로딩 느림, SEO 불리 | SPA, 대시보드, 내부 툴 |
+| SSR | 초기 로딩 빠름, SEO 유리 | 서버 부하, 페이지 전환 느림 | 쇼핑몰, 블로그, 뉴스 |
+| SSG | 속도 최강, 서버 부하 없음 | 데이터 변경 반영 어려움 | 정적 콘텐츠, 기술 문서 |
