Update 웹 페이지 렌더링 방식.md

--- a/Weekly Paper/Week 7/웹 페이지 렌더링 방식.md
+++ b/Weekly Paper/Week 7/웹 페이지 렌더링 방식.md
@@ -44,3 +44,74 @@
 | CSR | 상호작용성 뛰어남, 빠른 페이지 전환 | 초기 로딩 느림, SEO 불리 | SPA, 대시보드, 내부 툴 |
 | SSR | 초기 로딩 빠름, SEO 유리 | 서버 부하, 페이지 전환 느림 | 쇼핑몰, 블로그, 뉴스 |
 | SSG | 속도 최강, 서버 부하 없음 | 데이터 변경 반영 어려움 | 정적 콘텐츠, 기술 문서 |
+
+# 모범 답안
+
+## 1️⃣ CSR (Client-Side Rendering)
+
+- **정의**
+    
+    클라이언트(브라우저)에서 JS로 렌더링을 수행하는 방식.
+    
+    초기엔 HTML + JS만 받고, 이후 모든 UI 렌더링/업데이트는 브라우저에서 실행됨.
+    
+- **특징**
+    - ✅ 빠른 상호작용: 한 번 로드 후에는 페이지 전환이 매우 빠름
+    - ⚠️ 초기 로딩 느림: JS 실행 전까지 빈 화면
+    - ⚠️ SEO 불리: 초기 HTML이 비어 있음
+    - 🔄 동적 콘텐츠 처리에 강함
+- **사용 상황**
+    - 대시보드, SNS, 실시간 데이터 피드(채팅, 알림 등)
+    - SEO 중요하지 않고 **사용자 인터랙션**이 많은 웹앱
+
+---
+
+## 2️⃣ SSR (Server-Side Rendering)
+
+- **정의**
+    
+    서버에서 매 요청마다 HTML을 완성해 클라이언트에 전송하는 방식.
+    
+- **특징**
+    - ✅ 초기 로딩 빠름
+    - ✅ SEO 친화적 (완성된 HTML 제공)
+    - ⚠️ 서버 부하 증가 (매 요청 시 렌더링)
+    - ⚡ 즉시 콘텐츠 제공 가능
+- **사용 상황**
+    - 블로그, 뉴스 사이트, 쇼핑몰
+    - SEO와 초기 로딩 속도가 중요한 마케팅/콘텐츠 중심 사이트
+
+---
+
+## 3️⃣ SSG (Static Site Generation)
+
+- **정의**
+    
+    빌드 시점에 HTML 파일을 미리 생성하여 정적 파일로 제공하는 방식.
+    
+- **특징**
+    - ✅ 속도 최강 (정적 파일 바로 제공)
+    - ✅ 높은 보안성 (동적 서버 로직 없음)
+    - ⚠️ 데이터 변경 어려움 (빌드 시점 이후 고정)
+    - ☁️ CDN 배포로 글로벌 서비스에 적합
+- **사용 상황**
+    - 정적 콘텐츠 기반 사이트 (문서, 기술 블로그)
+    - 변경이 거의 없는 포트폴리오/기업 홈페이지
+
+---
+
+## 📊 비교 요약
+
+| 방식 | 장점 | 단점 | 적합한 상황 |
+| --- | --- | --- | --- |
+| **CSR** | 상호작용 뛰어남, 페이지 전환 빠름 | 초기 로딩 느림, SEO 약함 | 대시보드, SNS, 실시간 앱 |
+| **SSR** | 초기 로딩 빠름, SEO 강함 | 서버 부하 증가, 전환 속도 느림 | 블로그, 쇼핑몰, 뉴스 |
+| **SSG** | 로딩 최강, 서버 부하 없음, 보안성 높음 | 데이터 변경 어려움 | 정적 문서, 포트폴리오 |
+
+---
+
+## ✅ 결론
+
+- **CSR** → 동적 상호작용이 많고, SEO 중요하지 않은 앱 (대시보드/SNS)
+- **SSR** → SEO & 초기 로딩이 중요한 콘텐츠 웹사이트 (뉴스/쇼핑몰)
+- **SSG** → 정적 콘텐츠 위주 사이트 (문서/포트폴리오/공식 홈페이지)
