Update 15 표현식 & 조건문 & Spread.md

--- a/Study Notes/15 표현식 & 조건문.md
+++ b/Study Notes/15 표현식 & 조건문.md
@@ -1,1 +1,64 @@
+# 표현식 & 조건문 & Spread
 
+### 📅 날짜:
+
+> 2025.07.17 (목)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> 자바스크립트 문장과 표현식, 조건문 종류, 삼항 연산자, Spread 구문, 객체 표기법
+> 
+
+---
+
+### 📝 핵심 개념 요약:
+
+- **문장 (Statement)**: 어떤 **동작을 수행**하는 최소 단위의 코드 (ex. `if`, `switch`, `const a = 1;`)
+- **표현식 (Expression)**: 하나의 **값을 만들어내는 코드** (ex. `3 + 5`, `"hi" + "!"`)
+- **조건문 종류**
+    - `if ~ else`: 조건에 따라 분기
+    - `switch`: 여러 경우 중 일치하는 case 실행
+    - 삼항 연산자 `? :` : 간단한 조건 분기 표현
+- **Spread 구문**
+    - 배열이나 객체를 **펼쳐서 전달**
+    - 반대되는 개념은 **Rest parameter**
+- **객체 프로퍼티 표기법**
+    - 프로퍼티 이름과 변수 이름이 같다면 `:` 생략 가능
+
+### 📌 핵심 요약 표
+
+| 구분 | 설명 | 예시 |
+| --- | --- | --- |
+| 문장 (Statement) | 동작 수행 코드 블록 | `if () {}`, `let a = 1` |
+| 표현식 (Expression) | 하나의 값 생성 | `"hi" + "!"`, `3 + 5` |
+| 삼항 연산자 | 조건 ? 참 : 거짓 | `isUser ? "로그인" : "게스트"` |
+| Spread 구문 | 배열/객체를 펼침 | `[...arr1, ...arr2]` |
+| Rest parameter | 여러 값을 하나로 | `(...args)` |
+| 객체 축약 표기 | 변수명 = key명 시 생략 | `{ name, age }` |
+
+### 💻 실습 내용 정리:
+
+- 다양한 문장/표현식 작성 및 구분 실습 (`let x = 10 + 5;`, `if`문 등)
+- `if`, `switch`, 삼항 연산자 실습
+- Spread 구문을 이용해 배열 및 객체 복사/결합
+- Rest parameter와 Spread의 동작 차이 실습
+- 객체 축약 표기법으로 기존 객체 구조 단축
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- `삼항 연산자`는 복잡한 조건문에는 사용을 지양해야 함 (가독성 ↓)
+- Spread와 Rest의 차이를 혼동했으나, "묶기 vs 풀기"로 이미지화해서 해결
+
+### 💡 느낀 점 / 배운 점:
+
+- JavaScript는 문법이 자유로운 만큼, **문장과 표현식의 개념을 명확히 이해**하면 코드가 더 읽기 쉬워짐
+- 객체 축약 표기법은 실무에서 **코드 길이를 줄이는 데 매우 유용**
+
+### 🏷️ 키워드 (태그):
+
+`#문장과표현식` `#조건문` `#삼항연산자` `#Spread` `#객체축약` `#RestParameter`
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-07-17 | JS 문장, 표현식, 조건문, Spread | 문장/표현식 개념, 조건문/Spread/객체 축약 문법 이해 | 조건문, Spread/Rest, 객체 축약 실습 | 삼항 연산자 가독성 이슈, 묶기/풀기 개념 이미지화로 해결 | `#문장과표현식`, `#조건문`, `#Spread`, `#RestParameter`, `#객체표기법` | ✅ |
