--- a/Study Notes/16 구조 분해 할당, 에러 처리.md
+++ b/Study Notes/16 구조 분해 할당, 에러 처리.md
@@ -1,1 +1,69 @@
+### 📅 날짜:
 
+> 2025.07.18 (금)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> 구조 분해 할당(배열/객체), 에러 처리, forEach와 map 차이
+> 
+
+---
+
+### 📝 핵심 개념 요약:
+
+- **구조 분해 할당 (배열)**
+- 배열 값들을 인덱스 순서대로 변수에 할당
+- `const [a, b, ...rest] = arr;`
+    
+    → `rest`는 나머지를 배열로 받음
+    
+- 변수 개수가 배열보다 많으면 `undefined`가 할당
+- 변수 교환 가능: `[x, y] = [y, x];`
+- **구조 분해 할당 (객체)**
+    - `const {title, price} = obj;` → 동일한 이름의 프로퍼티 추출
+    - 새로운 이름으로 할당: `const {title: newTitle} = obj;`
+    - 기본값 지정: `{bar = '기본값'}`
+    - 나머지 프로퍼티는 `...rest`로 묶어서 받기 가능
+- **에러와 에러 객체**
+    - 대표적인 에러: `ReferenceError`, `TypeError`, `SyntaxError`
+    - 에러 객체 생성: `throw new TypeError('메시지');`
+    - `try...catch...finally` 문으로 예외 처리
+        - `finally`는 항상 실행되며, 내부 에러 발생 시 바깥 `catch`에서 처리
+- **forEach와 map**
+    - `forEach`: 반복 수행만, 반환값 없음
+    - `map`: 새로운 배열 반환
+
+### 📌 핵심 요약 표
+
+| 구분 | 설명 | 예시 |
+| --- | --- | --- |
+| 배열 구조 분해 | 순서대로 값 추출, 나머지 `...rest`로 받기 | `const [a, b, ...rest] = arr;` |
+| 객체 구조 분해 | 프로퍼티 이름 기반 추출, 기본값/이름 변경 | `const {title, price} = obj;` |
+| 에러 처리 | try-catch-finally로 예외 처리 | `try {...} catch(e) {...} finally{}` |
+| forEach vs map | 반복 작업 vs 새 배열 생성 | `arr.forEach(...)` / `arr.map(...)` |
+
+### 💻 실습 내용 정리:
+
+- 배열/객체 구조 분해로 값 추출 및 변수 교환 실습
+- 객체 기본값, 프로퍼티 이름 변경, `...rest` 활용
+- `try...catch...finally` 블록으로 예외 처리 연습 및 `throw` 사용
+- `forEach`와 `map` 비교 실습, 반환 차이 확인
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- `...rest`는 **마지막 위치에만** 올 수 있다는 점을 헷갈렸으나 규칙 재확인으로 해결
+- `map`과 `forEach`의 차이를 **반환값 유무**로 명확히 구분
+
+### 💡 느낀 점 / 배운 점:
+
+- 구조 분해 할당으로 코드가 **간결하고 직관적**으로 변함
+- `finally`는 항상 실행되므로 **리소스 정리나 후처리에 필수적**임을 이해
+
+### 🏷️ 키워드 (태그):
+
+`#구조분해할당` `#배열` `#객체` `#에러처리` `#trycatch` `#forEach` `#map`
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-07-18 | 구조 분해, 에러, 반복문 | 구조 분해로 값 추출, 에러 처리, map/forEach 차이 | 구조 분해, 에러 처리, map vs forEach 실습 | rest 위치와 반환 차이 헷갈림 해결 | `#구조분해할당` `#에러처리` `#map` | ✅ |
