Update 17 배열 메서드와 비동기 처리.md

--- a/Study Notes/17 배열 메서드와 비동기 처리.md
+++ b/Study Notes/17 배열 메서드와 비동기 처리.md
@@ -1,1 +1,58 @@
+### 📅 날짜:
 
+> 2025.07.21 (월)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> 자바스크립트 배열 메서드(filter, find, some, every, reduce)와 비동기 처리, 콜백 함수
+> 
+
+---
+
+### 📝 핵심 개념 요약:
+
+- **filter**: 조건을 만족하는 모든 요소를 배열로 반환
+- **find**: 조건을 만족하는 첫 번째 요소 하나만 반환 (`undefined` 가능)
+- **some / every**:
+    - `some`: 조건 만족 요소가 1개 이상이면 `true`
+    - `every`: 모든 요소가 조건을 만족하면 `true`
+- **reduce**: 배열 요소를 누적하여 하나의 값으로 계산 (accumulator 사용)
+- **콜백 함수**: 함수의 인자로 전달되어 나중에 호출되는 함수
+- **비동기 처리**: 작업 완료 전에도 코드 실행 가능
+    - `Promise`: 비동기 작업 성공/실패 결과를 표현
+    - `async/await`: 비동기 코드를 동기적으로 표현 가능
+
+### 📌 핵심 요약 표
+
+| 메서드 | 설명 | 반환값 | 예시 |
+| --- | --- | --- | --- |
+| `filter` | 조건에 맞는 모든 요소 | 배열 (`[]`) | `arr.filter(el => el > 3)` |
+| `find` | 조건에 맞는 첫 요소 | 요소 or `undefined` | `arr.find(el => el > 3)` |
+| `some` | 일부 요소 만족 여부 | `true` / `false` | `arr.some(el => el > 3)` |
+| `every` | 모든 요소 만족 여부 | `true` / `false` | `arr.every(el => el > 3)` |
+| `reduce` | 누적 계산 수행 | 하나의 값 | `arr.reduce((a, e) => a + e, 0)` |
+
+### 💻 실습 내용 정리:
+
+- `filter`, `find`, `some`, `every`, `reduce`를 각각 다양한 조건으로 실습
+- `forEach`, `map`에서 콜백 함수 실행 흐름 확인
+- `async/await`와 `Promise`를 사용한 비동기 데이터 fetch 테스트
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- `filter`와 `find` 반환값을 혼동했으나 **"filter = 배열, find = 첫 번째 요소"**로 정리
+- `some`과 `every`는 **boolean 값만 반환**한다는 점을 반복 실습으로 익힘
+
+### 💡 느낀 점 / 배운 점:
+
+- 배열 메서드의 차이를 정확히 이해하면 코드 가독성이 높아짐
+- `async/await`는 Promise보다 읽기 쉽고 직관적이라 실무에서 선호됨
+
+### 🏷️ 키워드 (태그):
+
+`#filter` `#find` `#some` `#every` `#reduce` `#콜백함수` `#비동기` `#async` `#await`
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-07-21 | 배열 메서드 & 비동기 처리 | filter, find, some, every, reduce 이해, 콜백과 async/await | 배열 메서드와 비동기 처리 실습 | filter vs find, some/every 반환값 차이 명확화 | `#async` `#filter` `#reduce` `#find` `#await`  | ✅ |
