Update 19 자바스크립트 모듈 시스템.md

--- a/Study Notes/19 자바스크립트 모듈 시스템.md
+++ b/Study Notes/19 자바스크립트 모듈 시스템.md
@@ -1,1 +1,72 @@
+### 📅 날짜:
 
+> 2025.07.23 (수)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> 자바스크립트 **모듈 시스템 (ES Modules, CommonJS)과 import/export**
+> 
+
+---
+
+### 📝 핵심 개념 요약:
+
+- **모듈(Module)**
+- 코드 재사용성과 유지보수성을 높이는 **독립적인 코드 단위**
+- 다른 파일에서 `import`하여 사용 가능
+- **ES Modules (ESM)**
+    - 2015년에 등장한 **표준 모듈 시스템**
+    - `export` / `import` 문법 사용, 웹과 Node.js 모두 지원
+    - Node.js에서는 `.mjs` 확장자가 필요 (CommonJS와 구분)
+- **CommonJS**
+    - Node.js의 기존 모듈 시스템
+    - `require()` / `module.exports` 사용
+- **export 종류**
+    - **Named Export**: 여러 항목을 내보내기 → `export { PI, add }`
+    - **Default Export**: 파일에서 하나만 기본 내보내기 → `export default 함수`
+- **import 사용**
+    - Named Import: `import { PI, add } from './math.mjs'`
+    - Default Import: `import calc from './math.mjs'`
+    - 모든 내보내기 한 번에: `import * as math from './math.mjs'` → `math.PI`
+    - 이름 바꾸기: `import { PI as circlePI } from './math.mjs'`
+- **npm**
+    - Node.js의 **패키지 관리자**
+    - 서드파티 모듈 설치: `npm install 모듈명`
+
+### 📌 핵심 요약 표
+
+| 구분 | 설명 | 예시 코드 |
+| --- | --- | --- |
+| 모듈 | 재사용 가능한 코드 단위 | `export`, `import` 사용 |
+| Named Export | 여러 개 내보내기 | `export { PI, add }` |
+| Default Export | 파일에서 하나만 기본 내보내기 | `export default 함수` |
+| Import 방식 | 필요 항목만 불러오기 | `import { PI } from './file'` |
+| CommonJS | Node.js 전용 모듈 시스템 | `const mod = require('mod')` |
+| npm | Node.js 패키지 관리자 | `npm install axios` |
+
+### 💻 실습 내용 정리:
+
+- **Named Export & Import**로 `PI`와 `add` 함수 가져오기
+- **Default Export**로 기본 함수 불러오기
+- `import * as utils` 형태로 전체 불러오기 및 이름 바꾸기 실습
+- Node.js에서 CommonJS 문법을 ESM(`import`)으로 변환해보기
+- `npm install`로 서드파티 모듈 설치 후 `import`하여 사용
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- **default export와 named export를 혼용**할 때 import 문법 혼동 → 실습으로 정리 완료
+- Node.js에서 **ESM 사용 시 `.mjs` 확장자 필수**라는 점 재확인
+
+### 💡 느낀 점 / 배운 점:
+
+- 모듈화를 통해 코드 유지보수가 **훨씬 수월**해짐을 체감
+- `import * as` 구문이 큰 프로젝트에서 이름 충돌 방지에 유용하다고 느낌
+
+### 🏷️ 키워드 (태그):
+
+`#filter` `#find` `#some` `#every` `#reduce` `#콜백함수` `#비동기` `#async` `#await`
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-07-23 | 모듈과 import/export | ES Modules, CommonJS, export 종류 | Named & Default Export 실습, npm 사용 | export 혼동 해소, .mjs 필요성 이해 | `#ESModules` `#import` `#export` | ✅ |
