--- a/Study Notes/32 백엔드 환경 변수 설정 및 배포 정리.md
+++ b/Study Notes/32 백엔드 환경 변수 설정 및 배포 정리.md
@@ -1,1 +1,118 @@
+# 백엔드 환경 변수 설정 및 배포 정리
 
+### 📅 날짜:
+
+> 2025.08.20 (수)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> 환경 변수(dotenv), CORS 설정, Render로 백엔드 배포
+> 
+
+---
+
+## 📝 핵심 개념 요약
+
+- **환경 변수(Environment Variable)**: 실행 환경에 따라 달라지는 값(DATABASE_URL, PORT 등)을 코드와 분리해 안전하게 관리
+- **dotenv 라이브러리**: `.env` 파일에 환경 변수를 정의하고 `process.env`로 사용
+- **CORS(Cross-Origin Resource Sharing)**: 다른 도메인/포트에서 API를 호출할 수 있도록 허용
+- **GitHub + Render 배포**: 코드 버전 관리와 배포 자동화를 통해 서비스 운영
+- **프로덕션 DB 설정**: 배포 환경에서도 접근 가능한 MongoDB Atlas 설정 필요
+
+## 📊 핵심 요약 표
+
+| 구분 | 내용 | 예시 |
+| --- | --- | --- |
+| 환경 변수 | 로컬/배포 환경에 따라 값 변경 가능, 민감 정보 보호 | `DATABASE_URL`, `PORT` |
+| dotenv 사용 | .env 파일에서 변수 로딩 | `import * as dotenv from 'dotenv'; dotenv.config();` |
+| CORS | 다른 출처(frontend)에서 API 호출 허용 | `app.use(cors({ origin: ['http://127.0.0.1:3000', 'https://my-todo.com'] }));` |
+| GitHub 업로드 | 버전 관리 및 Render 연동 | `.gitignore` 생성 후 push |
+| Render 배포 | 자동 배포, 환경 변수 설정, Node.js 버전 지정 | Build Command: `npm install`, Start Command: `npm start` |
+| 프로덕션 DB | Atlas에서 IP 허용 및 시드 데이터 삽입 | Network Access → Allow access from anywhere |
+
+### 💻 실습 내용 정리
+
+1. **환경 변수 설정**
+
+```bash
+npm install dotenv
+```
+
+`.env`
+
+```
+DATABASE_URL="mongodb+srv://<username>:<password>@todo-api.l0aepsl.mongodb.net/todo-api?retryWrites=true&w=majority"
+PORT=3000
+```
+
+`app.js` 수정
+
+```jsx
+import * as dotenv from 'dotenv';
+dotenv.config();
+
+mongoose.connect(process.env.DATABASE_URL)
+  .then(() => console.log('Connected to DB'));
+
+app.listen(process.env.PORT || 3000, () => console.log('Server Started'));
+```
+
+1. **CORS 설정**
+
+```bash
+npm install cors
+```
+
+```jsx
+import cors from 'cors';
+
+const corsOptions = {
+  origin: ['http://127.0.0.1:3000', 'https://my-todo.com']
+};
+
+app.use(cors(corsOptions));
+app.use(express.json());
+```
+
+1. **GitHub 업로드**
+
+```bash
+git init
+echo 'node_modules/\n.env\n*.http\n*.log\n*.gz\n.DS_Store' > .gitignore
+git add .
+git commit -m "First Commit"
+git branch -M main
+git remote add origin <GitHub repository URL>
+git push -u origin main
+```
+
+1. **Render 배포**
+- Render 회원가입 → GitHub 연동 → Web Service 생성
+- 환경 변수 입력: `DATABASE_URL`
+- Node.js 버전 지정: `18.x`
+- Auto-Deploy 설정 → 코드 push 시 자동 배포
+1. **프로덕션 DB 설정**
+- MongoDB Atlas: Network Access → Allow access from anywhere
+- 필요한 시드 데이터 직접 삽입
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- `.env` 대신 env.js 사용 시, 민감 정보 GitHub 노출 가능 → dotenv로 변경
+- CORS 설정하지 않으면 프론트엔드에서 API 호출 시 오류 발생
+- 배포 시 MongoDB Atlas IP 허용 안 하면 서버에서 DB 접근 불가
+
+### 💡 느낀 점 / 배운 점:
+
+- dotenv로 환경 변수 관리하면 로컬/배포 환경 모두 동일 코드 사용 가능
+- CORS 설정은 배포 전 반드시 확인 필요
+- GitHub + Render 조합으로 배포 자동화 가능, 배포 과정 단순화
+
+### 🏷️ 키워드 (태그):
+
+`#dotenv` `#환경변수` `#CORS` `#MongoDB` `#Atlas` `#Render` `#배포` `#GitHub` `#NodeJS`
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-08-20 | 환경 변수 설정 & 배포 | dotenv, CORS, Render 배포, 프로덕션 DB 설정 | .env 설정, CORS 허용, GitHub push, Render Web Service 생성 | env.js → dotenv 변경, CORS 설정 필요, Atlas IP 허용 | `#dotenv` `#CORS` `#MongoDB` `#Render`           `#배포` 
+  | ✅ |
