Update 40 폰트 설정.md

--- a/Study Notes/40 폰트 설정.md
+++ b/Study Notes/40 폰트 설정.md
@@ -1,1 +1,117 @@
+# 폰트 설정
 
+### 📅 날짜:
+
+> 2025.09.01 (월)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> Next.js에서 폰트 적용 방법
+> 
+
+---
+
+## 📝 핵심 개념 요약
+
+- **구글 폰트**
+- 무료, 성능 최적화, 자동 캐싱, FOIT/FOUT 방지 지원
+- `next/font/google`을 사용하면 **빌드 시 폰트 다운로드 → 로컬 제공**
+- Variable Font 권장 (굵기 범위를 유연하게 제공, 성능 최적화)
+- **className 적용**: HTML 전체에 적용 (가장 단순, 실무에서 자주 사용)
+- **variable 적용**: CSS 변수로 폰트 선언, Tailwind 등과 조합 유리
+- **로컬 폰트**
+    - 프로젝트 내부에 폰트 파일 포함하여 사용할 수 있음
+    - 구글 폰트에 없는 폰트 적용 시 사용
+
+## 📊 핵심 요약 표
+
+| 구분 | 설명 | 장점 |
+| --- | --- | --- |
+| **구글 폰트 (next/font/google)** | 빌드 시 다운로드 후 로컬 제공 | FOIT/FOUT 방지, 캐싱 최적화 |
+| **Variable Font** | 하나의 파일로 다양한 굵기 제공 (100~900) | 성능 최적화, 스타일 유연성 ↑ |
+| **className 방식** | `className={inter.className}` | 전역 적용 간편 |
+| **variable 방식** | `className={inter.variable}` + CSS 변수 | Tailwind/커스텀 스타일과 유연 조합 |
+| **로컬 폰트** | 프로젝트에 직접 포함 | 구글 폰트에 없는 폰트 사용 가능 |
+
+### 💻 실습 내용 정리
+
+1. **구글 폰트 (className 적용)**
+
+```jsx
+import { Inter } from 'next/font/google'
+
+const inter = Inter({
+  subsets: ['latin'],
+  display: 'swap',
+})
+
+export default function RootLayout({ children }) {
+  return (
+    <html lang="en" className={inter.className}>
+      <body>{children}</body>
+    </html>
+  )
+}
+```
+
+1. **구글 폰트 (variable 적용)**
+
+```jsx
+import { Inter } from 'next/font/google'
+
+const inter = Inter({
+  subsets: ['latin'],
+  display: 'swap',
+  variable: '--font-inter'
+})
+
+export default function RootLayout({ children }) {
+  return (
+    <html lang="en" className={inter.variable}>
+      <body className="font-[family-name:var(--font-inter)]">
+        {children}
+      </body>
+    </html>
+  )
+}
+```
+
+1. **로컬 폰트 적용**
+
+```jsx
+import localFont from 'next/font/local'
+
+const geistSans = localFont({
+  src: "./fonts/GeistVF.woff",
+  weight: "100 900",
+})
+
+export default function RootLayout({ children }) {
+  return (
+    <html lang="en" className={geistSans.className}>
+      <body>{children}</body>
+    </html>
+  )
+}
+```
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- 전통적인 `@import` 방식은 성능 최적화가 전혀 없음 → FOIT/FOUT 발생.
+- `next/font/google` 사용 시 **자동 최적화** 덕분에 이런 문제 해결됨.
+- `className`은 전역 적용에 좋고, `variable`은 CSS 변수 방식으로 Tailwind 등과 궁합이 좋음.
+
+### 💡 느낀 점 / 배운 점:
+
+- 단순히 "폰트 적용"이 아니라, **성능 최적화 & UX 개선** 차원에서 접근해야 함을 깨달음.
+- Variable Font의 장점을 알게 되어 앞으로 적극 활용해야겠다고 생각함.
+- 로컬 폰트를 적용할 수 있어, 회사 브랜딩 폰트나 특수 폰트도 쉽게 대응 가능함.
+
+### 🏷️ 키워드 (태그):
+
+`#Nextjs` `#Font` `#GoogleFonts` `#VariableFont` `#로컬폰트` `#nextfont`
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-09-01 | Next.js 폰트 설정 | `next/font/google`로 성능 최적화된 구글 폰트 사용, Variable Font 권장. className은 전역 적용, variable은 CSS 변수 활용. 로컬 폰트는 커스텀 적용 가능 | className 방식, variable 방식, 로컬 폰트 적용 코드 작성 | @import 방식의 한계(FOUT/FOIT), Next.js 내장 기능으로 자동 최적화 해결 | `#Nextjs` `#Font` `#GoogleFonts` `#VariableFont` `#로컬폰트` | ✅ |
