Update 41 4가지 렌더링 방식.md

--- a/Study Notes/41 4가지 렌더링 방식.md
+++ b/Study Notes/41 4가지 렌더링 방식.md
@@ -1,1 +1,100 @@
+# 4가지 렌더링 방식
 
+### 📅 날짜:
+
+> 2025.09.02 (화)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> SSG / ISR / SSR / CSR 개념 및 특징
+> 
+
+---
+
+## 📝 핵심 개념 요약
+
+- **SSG (Static Site Generation)**
+- 빌드 시 100% 프리렌더링 → 정적인 페이지 제공
+- Next.js 기본 렌더링 방식
+- **ISR (Incremental Static Regeneration)**
+    - 정적 페이지를 일정 주기마다 재생성하여 최신화
+    - `revalidate` 옵션 또는 fetch 설정으로 적용
+- **SSR (Server Side Rendering)**
+    - 요청 시마다 서버에서 새롭게 HTML 생성
+    - 동적 라우팅, 쿠키/헤더 사용 시 기본적으로 적용
+- **CSR (Client Side Rendering)**
+    - `"use client"` 선언된 컴포넌트에서 실행
+    - useState, useEffect, 이벤트 핸들러, window 객체 필요 시 사용
+- **Hydration**
+    - 서버에서 프리렌더링된 HTML을 브라우저에서 JS로 인터랙티브하게 변환하는 과정
+
+## 📊 핵심 요약 표
+
+| 방식 | 설명 | 적용 방법 | 장점 | 단점 |
+| --- | --- | --- | --- | --- |
+| **SSG** | 빌드 시 정적 HTML 생성 | 기본값 | 빠른 응답, 캐싱 | 데이터 변경 반영 어려움 |
+| **ISR** | 일정 시간마다 정적 페이지 재생성 | `revalidate`, fetch 옵션 | 최신화 가능, 성능 유지 | 실시간성 부족 |
+| **SSR** | 요청마다 HTML 생성 | `dynamic='force-dynamic'`, `cache:'no-store'` 등 | 최신 데이터 반영 | 응답 속도 느림 |
+| **CSR** | 클라이언트에서 JS로 렌더링 | `"use client"` 선언 | 동적 UI, 이벤트 처리 | 초기 로딩 지연, 성능 저하 가능 |
+
+### 💻 실습 내용 정리
+
+1. **ISR 적용**
+
+```jsx
+// page.jsx
+export const revalidate = 5 // 5초마다 새로 고침
+```
+
+```jsx
+fetch('https://jsonplaceholder.typicode.com/todos/1', { next: { revalidate: 5 } })
+```
+
+1. **SSR 적용**
+
+```jsx
+// page.jsx
+export const dynamic = 'force-dynamic'
+```
+
+```jsx
+fetch('https://jsonplaceholder.typicode.com/todos/1', { cache: 'no-store' })
+```
+
+1.  **CSR 적용**
+
+```jsx
+"use client"
+
+import { useState } from "react";
+
+export default function Counter() {
+  const [count, setCount] = useState(0)
+  return (
+    <button onClick={() => setCount(count + 1)}>
+      {count}
+    </button>
+  )
+}
+```
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- `"use client"` 선언을 페이지 전체에 넣으면 성능 저하 발생 → 꼭 필요한 부분만 분리해서 사용해야 함.
+- 개발 모드(`npm run dev`)에서는 SSG를 체감하기 어렵고, **빌드 후 배포 환경에서 확인 가능**.
+- 서버/클라이언트 컴포넌트 혼합 가능 → 사용자 인터랙션 부분만 CSR로 분리하는 것이 권장.
+
+### 💡 느낀 점 / 배운 점:
+
+- 단순히 렌더링 전략이 아니라, **사용자 경험(UX)과 성능 최적화**의 균형을 잡는 것이 핵심.
+- SSG/ISR/SSR/CSR을 상황에 맞게 조합해야 실무에서 좋은 결과를 얻을 수 있음을 깨달음.
+- `"use client"`를 남발하지 않고, 서버 컴포넌트를 최대한 활용하는 것이 성능 유지에 중요함.
+
+### 🏷️ 키워드 (태그):
+
+`#Nextjs` `#Rendering` `#SSG` `#ISR` `#SSR` `#CSR` `#useClient` `#Hydration`
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-09-02 | Next.js 렌더링 방식 | SSG: 빌드 시 정적 생성, ISR: 일정 주기 업데이트, SSR: 요청마다 서버 생성, CSR: 클라이언트 렌더링. “use client”는 필요한 부분만. | revalidate, dynamic, cache 옵션 적용, CSR Counter 컴포넌트 작성 | `"use client"` 남발 시 성능 저하 → 최소화 필요. SSG는 빌드 환경에서만 확인 가능. | `#Nextjs` `#Rendering` `#SSG` `#ISR` `#SSR` `#CSR` `#Hydration` | ✅ |
