Update 44 환경 변수 처리.md

--- a/Study Notes/44 환경 변수 처리.md
+++ b/Study Notes/44 환경 변수 처리.md
@@ -1,1 +1,64 @@
+# 환경 변수 처리
 
+### 📅 날짜:
+
+> 2025.09.05 (금)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> Next.js 환경 변수(.env) 처리 방식
+> 
+
+---
+
+## 📝 핵심 개념 요약
+
+- **서버 환경(Node.js)**
+- `.env` 파일에 자유롭게 변수명 지정 가능
+- ex) `DB_HOST=https://db-host.com`
+- **클라이언트 환경(Browser)**
+    - 반드시 `NEXT_PUBLIC_` prefix 필요
+    - ex) `NEXT_PUBLIC_MY_HOST=http://localhost:3000`
+
+➡️ 보안상 민감한 데이터는 클라이언트에서 접근 불가하도록 **prefix 구분**이 필요
+
+## 📊 핵심 요약 표
+
+| 구분 | 네이밍 규칙 | 접근 가능 환경 | 예시 |
+| --- | --- | --- | --- |
+| 서버(Node.js) | 자유롭게 지정 | 서버 전용 | `DB_HOST=https://db-host.com` |
+| 클라이언트(Browser) | `NEXT_PUBLIC_` prefix 필수 | 클라이언트/서버 모두 | `NEXT_PUBLIC_API_URL=http://localhost:3000` |
+
+### 💻 실습 내용 정리
+
+- `.env` 파일 생성 후 서버 전용 변수와 클라이언트 전용 변수를 구분 작성
+    
+    ```
+    # 서버 전용
+    DB_HOST=https://db-host.com
+    
+    # 클라이언트 접근 가능
+    NEXT_PUBLIC_MY_HOST=http://localhost:3000
+    ```
+    
+- 서버 코드에서는 `process.env.DB_HOST`로 접근
+- 클라이언트 코드에서는 `process.env.NEXT_PUBLIC_MY_HOST`로 접근
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- ❌ 클라이언트에서 `DB_HOST`를 직접 불러오려고 해서 `undefined` 오류 발생
+- ✅ 해결: `NEXT_PUBLIC_` prefix를 붙여 `NEXT_PUBLIC_DB_HOST`로 변경 후 접근
+
+### 💡 느낀 점 / 배운 점:
+
+- 환경 변수는 **보안의 핵심**이라 서버/클라이언트 접근 권한을 명확히 나누어야 한다는 걸 알게 됨
+- Next.js가 prefix 규칙을 통해 이를 강제하는 이유를 이해할 수 있었음
+
+### 🏷️ 키워드 (태그):
+
+`#Nextjs` `#환경변수` `#env` `#서버` `#클라이언트` `#NEXT_PUBLIC`
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-09-05 | Next.js 환경 변수 처리 | 서버는 자유 네이밍, 클라이언트는 `NEXT_PUBLIC_` prefix 필요 | `.env` 작성 후 `process.env` 접근 | prefix 누락 시 undefined → `NEXT_PUBLIC_`로 해결 | `#Nextjs` `#환경변수` `#env` `#NEXT_PUBLIC` | ✅ |
